fix(core): HTTP tests